@@ -1,3 +1,8 @@
+2011-03-30  Alexey Shvetsov <alexxy@gentoo.org>
+
+	* util/grub.d/10_linux.in: Add gentoo-specific Linux and initrd names.
+	* util/grub.d/20_linux_xen.in: Likewise.
+
 2011-03-30  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* grub-core/disk/raid.c (insert_array): Add few potentially
